<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yaya</string>
    <string name="hello_world">Nothing here yet yo!</string>
    <string name="intro_text">Welcome to Yaya-desu!</string>
    <string name="action_settings">Settings</string>
    <string name="mal_group_heading">MyAnimeList.net settings</string>
    <string name="mal_username">Your MyAnimeList.net username</string>
    <string name="mal_default_username">Your username</string>
    <string name="title_heading">Title:</string>
    <string name="episode_heading">Progress:</string>
    <string name="filename">Filename:</string>
    <string name="uri">URI:</string>
    <string name="play_mx">Play with MX Player</string>
    <string name="title_activity_settings2">Main Settings</string>
    <string name="mal_password">Your MyAnimeList.net password</string>
    <string name="status_heading">Status:</string>
    <string name="updated_heading">Last updated:</string>
    <string name="not_found">No match found</string>
    <string name="preferences">Preferences</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello">Hello World, FileExplore!</string>


</resources>
