<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/main_info_view">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:rowCount="2"
        android:id="@+id/raw_info">

        <TextView
            android:layout_column="0"
            android:layout_marginRight="5dp"
            android:layout_row="0"
            android:text="@string/filename"
            android:id="@+id/filename_heading" />

        <TextView
            android:id="@+id/filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0" />


    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="2"
        android:id="@+id/extracted_info"
        android:layout_below="@id/raw_info">

        <TextView
            android:id="@+id/title_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginRight="5dp"
            android:layout_row="0"
            android:autoText="false"
            android:text="@string/title_heading" />

        <TextView
            android:id="@+id/episode_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginRight="5dp"
            android:layout_row="1"
            android:text="@string/episode_heading" />

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/episode_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:onClick="playFile"
        android:text="@string/play_mx"
        android:layout_below="@id/extracted_info"
        android:id="@+id/play_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/play_button"
        android:layout_marginTop="10dp"
        android:id="@+id/match_title"
        android:text="@string/not_found" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:onClick="update"
        android:text="Update MAL"
        android:layout_below="@id/match_title"
        android:id="@+id/update_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_status"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/update_button"
        android:layout_alignLeft="@+id/update_button"
        android:layout_alignStart="@+id/update_button" />

</RelativeLayout>