<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/episode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_title"
        android:text="@string/episode_heading" />

    <TextView
        android:id="@+id/watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/episode_label" />

    <TextView
        android:id="@+id/list_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_title"
        android:layout_toRightOf="@id/watched" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/episode_label"
        android:text="@string/status_heading" />

    <TextView
        android:id="@+id/list_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/episode_label"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/status_label" />

    <TextView
        android:id="@+id/updated_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_label"
        android:text="@string/updated_heading" />

    <TextView
        android:id="@+id/updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_status"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/updated_label" />

</RelativeLayout>