<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/app_bar"

        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_toolbar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_alignTop="@+id/title_label"
            android:layout_alignBottom="@+id/updated_label"
            android:layout_toLeftOf="@+id/title_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <!--@TODO Replace this with loading of anime images-->
        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_heading"
            android:layout_above="@+id/episode_label"
            android:layout_alignLeft="@+id/episode_label"
            android:layout_alignStart="@+id/episode_label" />

        <TextView
            android:id="@+id/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/title_label" />

        <TextView
            android:id="@+id/episode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode_heading"
            android:layout_below="@+id/list_title"
            android:layout_alignRight="@+id/write"
            android:layout_alignEnd="@+id/write" />

        <TextView
            android:id="@+id/watched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_title"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/episode_label" />

        <TextView
            android:id="@+id/episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_title"
            android:layout_toRightOf="@id/watched" />

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_heading"
            android:layout_alignTop="@+id/status"
            android:layout_alignLeft="@+id/episode_label"
            android:layout_alignStart="@+id/episode_label" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/watched"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/status_label" />

        <TextView
            android:id="@+id/updated_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last updated on: "
            android:layout_alignBaseline="@+id/updated"
            android:layout_alignBottom="@+id/updated"
            android:layout_alignLeft="@+id/status_label"
            android:layout_alignStart="@+id/status_label" />

        <TextView
            android:id="@+id/updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_label"
            android:layout_toRightOf="@id/updated_label" />
        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updated"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Synopsis" />

        <TextView
            android:id="@+id/summary_box"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/plot"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:text="abc"

            />

        <TextView
            android:id="@+id/list_custom_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_box"
            android:layout_marginTop="10dp"
            android:text="LEL" />

        <Button
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_custom_names"
            android:layout_marginTop="10dp"
            android:text="READ"
            android:visibility="gone" />

        <TextView
            android:id="@+id/syn_helper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/read"
            android:layout_marginTop="10dp"
            android:text="Enter custom names below, separated by a semicolon" />

        <EditText
            android:id="@+id/synonyms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/syn_helper"
            android:layout_marginTop="10dp"
            android:hint="Synonyms" />

        <Button
            android:id="@+id/write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/synonyms"
            android:layout_marginTop="10dp"
            android:text="Set Synonyms" />


    </RelativeLayout>
</RelativeLayout>